# SKN21-FINAL-4TEAM

./: .env.example  .gitignore  CLAUDE.md  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  get_user.py
backend/: CLAUDE.md  alembic.ini  check_frontend_login.py  check_key.py  check_login.py  pyproject.toml  requirements.txt  seed_test.py  test_chat_e2e.py  test_nickname.py  test_user1.py  update_test.py
backend/alembic/: env.py
backend/alembic/versions/: 0de13d3298fa_add_preferred_themes_to_users.py  a1b2c3d4e5f6_add_community_dislikes.py  a1b2c3d4e5f6_add_deleted_session_status.py  a1b2c3d4e5f6_add_indexes_to_debate_match_queue.py  a3b4fcc66da6_initial_schema.py  b1c2d3e4f5a6_add_usage_quotas.py  b2c3d4e5f6a7_add_persona_category.py  b2c3d4e5f6g7_add_match_predictions.py  c2d3e4f5a6b7_add_credits_subscriptions.py  c3d4e5f6a7b8_add_persona_anonymous.py  c3d4e5f6g7h8_add_match_featured.py  d3e4f5a6b7c8_add_community_board.py  d4e5f6a7b8c9_add_llm_model_credit_fields.py  d4e5f6g7h8i9_add_season_system.py  e4f5a6b7c8d9_add_agent_system.py  e5f6a7b8c9d0_add_video_generations.py  e5f6g7h8i9j0_add_tournament_system.py  f5a6b7c8d9e0_add_rp_features.py  f6a7b8c9d0e1_add_persona_reports.py  f6g7h8i9j0k1_add_multi_agent.py  g7b8c9d0e1f2_add_banned_until.py  g7h8i9j0k1l2_add_summary_report.py  h8c9d0e1f2g3_add_character_page_system.py  h8i9j0k1l2m3_add_promotion_series.py  i9j0k1l2m3n4_add_season_stats.py  j0e1f2g3h4i5_add_debate_platform.py  j0k1l2m3n4o5_add_draw_count_to_promotion_series.py  (+24 more)
backend/app/: main.py
backend/tests/: conftest.py
(+655 files in other folders)
